<resources>
    <string name="app_name">L\'odyssée des vagabonds</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">L\'odyssée des vagabonds</string>
    <string name="nav_header_subtitle">version 0.0.1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_title_home">Accueil</string>
    <string name="menu_title_character">Personnages</string>
    <string name="menu_title_dice">Lancée de dés</string>
    <string name="menu_title_classe">Classes</string>
    <string name="menu_title_race">Races</string>
    <string name="menu_title_equipment">Equipements</string>
    <string name="menu_title_bestiary">Bestiaire</string>
    <string name="menu_title_rules">Règles système</string>
    <string name="menu_title_annex">Annexe</string>

    <string name="login_hint_login">Identifiant (email)</string>
    <string name="login_hint_password">Mot de passe (6 caractères min.)</string>
    <string name="login_sign_in">Connexion</string>
    <string name="login_sign_up">Inscription</string>
    <string name="login_no_account_yet">Nouveau sur l\'appli ?</string>

    <string name="title_stepper_one">Introduction</string>
    <string name="title_stepper_second">Potentiel</string>
    <string name="title_stepper_third">Destinée</string>
    <string name="title_stepper_fourth">Capacités</string>
    <string name="title_stepper_fifth">Récap</string>


    <string name="entity_name_creature">Créature</string>
    <string name="entity_description_creature">créatures vivantes ou non, regroupe les personnages (joueurs ou non), les familiers et les monstres</string>
    <string name="entity_name_building">Structure</string>
    <string name="entity_description_building">Regroupe les structures naturels ou construites par quelqu\'un</string>
    <string name="entity_name_armor">Armure</string>
    <string name="entity_description_armor">desc armures</string>
    <string name="entity_name_weapon">Arme</string>
    <string name="entity_description_weapon">desc armes</string>
    <string name="entity_name_consumable">Consommable</string>
    <string name="entity_description_consumable">Regroupe ce qui peut etre ingéré (nourriture, boisson, potions)</string>
    <string name="entity_name_object">Objets (autres)</string>
    <string name="entity_description_object">desc objets</string>


    <string name="dialog_title_logout">Etes-vous sûr de vouloir vous déconnecter ?</string>

    <string name="error_auth_failed">La connexion a échoué. Vérifiez vos identifiants</string>
    <string name="error_auth_login_empty">Identifiant non renseigné</string>
    <string name="error_auth_password_empty">Mot de passe non renseigné</string>

    <string name="dice_health">Dé de vie</string>
    <string name="dice_mana">Dé de mana</string>


</resources>